# docs/swagger.json
@@ -16,9 +16,9 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/health": {
+        "/api/v1/vocabulary": {
             "get": {
-                "description": "Health check",
+                "description": "Get all vocabulary",
                 "consumes": [
                     "application/json"
                 ],
@@ -26,14 +26,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "health"
+                    "vocabulary"
                 ],
-                "summary": "Health check",
+                "summary": "Get all vocabulary",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.HealthResponse"
+                            "$ref": "#/definitions/models.Vocabulary"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -41,10 +47,40 @@
         }
     },
     "definitions": {
-        "model.HealthResponse": {
+        "models.Response": {
             "type": "object",
             "properties": {
+                "data": {},
                 "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.Vocabulary": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "english": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "mp3": {
+                    "type": "string"
+                },
+                "tag": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "vietnamese": {
                     "type": "string"
                 }
             }
